chore: add tag for access scopes

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "7e1ce6ae588ac87953ac011795fbecb9"
 name = "build-a-discount-function"
 handle = "build-a-discount-function"
-application_url = "https://vbulletin-lender-pe-microwave.trycloudflare.com"
+application_url = "https://costa-tariff-quarter-mega.trycloudflare.com"
 embedded = true
 
 [build]
@@ -11,15 +11,16 @@ automatically_update_urls_on_dev = true
 dev_store_url = "quickstart-3a22a586.myshopify.com"
 include_config_on_deploy = true
 
+# [START discount-allocator.access_scopes]
 [access_scopes]
-# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = ""
+scopes = "write_products, write_discounts, write_discounts_allocator_functions, read_products"
+# [END discount-allocator.access_scopes]
 
 [auth]
 redirect_urls = [
-  "https://vbulletin-lender-pe-microwave.trycloudflare.com/auth/callback",
-  "https://vbulletin-lender-pe-microwave.trycloudflare.com/auth/shopify/callback",
-  "https://vbulletin-lender-pe-microwave.trycloudflare.com/api/auth/callback"
+  "https://costa-tariff-quarter-mega.trycloudflare.com/auth/callback",
+  "https://costa-tariff-quarter-mega.trycloudflare.com/auth/shopify/callback",
+  "https://costa-tariff-quarter-mega.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
