--- a/package.json
+++ b/package.json
@@ -2,72 +2,73 @@
   "name": "build-a-discount-function-with-remix",
   "private": true,
   "scripts": {
-    "build": "remix vite:build",
+    "build": "react-router build",
     "dev": "shopify app dev",
     "config:link": "shopify app config link",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "react-router-serve ./build/server/index.js",
     "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "shopify": "shopify",
     "prisma": "prisma",
     "graphql-codegen": "graphql-codegen",
-    "vite": "vite"
+    "vite": "vite",
+    "typecheck": "react-router typegen && tsc --noEmit"
   },
   "type": "module",
   "engines": {
-    "node": "^18.20 || ^20.10 || >=21.0.0"
+    "node": ">=20.10"
   },
   "dependencies": {
-    "@prisma/client": "^5.12.1",
-    "@remix-run/dev": "^2.7.1",
-    "@remix-run/node": "^2.7.1",
-    "@remix-run/react": "^2.7.1",
-    "@remix-run/serve": "^2.7.1",
-    "@shopify/app-bridge-react": "^4.1.3",
-    "@shopify/app-bridge": "^3.7.10",
-    "@shopify/app-bridge-types": "^0.0.11",
+    "@prisma/client": "^6.16.3",
+    "@react-router/dev": "^7.9.3",
+    "@react-router/fs-routes": "^7.9.3",
+    "@react-router/node": "^7.9.3",
+    "@react-router/serve": "^7.9.3",
+    "@shopify/app-bridge-react": "^4.2.4",
+    "@shopify/shopify-app-react-router": "^1.0.0",
+    "@shopify/shopify-app-session-storage-prisma": "^7.0.0",
     "@shopify/discount-app-components": "3.0.1",
-    "@shopify/polaris": "^13.0.0",
+    "@shopify/polaris": "^12.0.0",
     "@shopify/react-form": "^2.7.1",
-    "@shopify/shopify-app-remix": "^3.0.2",
-    "@shopify/shopify-app-session-storage-prisma": "^5.0.2",
-    "isbot": "^5.1.4",
-    "prisma": "^5.12.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-tsconfig-paths": "^4.3.1",
-    "cross-env": "^7.0.3"
+    "isbot": "^5.1.31",
+    "prisma": "^6.16.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router": "^7.9.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.7.1",
-    "@remix-run/eslint-config": "^2.7.1",
-    "@shopify/api-codegen-preset": "^1.0.1",
-    "@types/eslint": "^8.40.0",
-    "@types/node": "^20.6.3",
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.3"
+    "@shopify/api-codegen-preset": "^1.2.0",
+    "@shopify/polaris-types": "^1.0.1",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.18.8",
+    "@types/react": "^18.3.25",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "eslint-import-resolver-typescript": "^3.10.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "graphql-config": "^5.1.1",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3",
+    "vite": "^6.3.6"
   },
-  "workspaces": [
-    "extensions/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "extensions/*"
+    ]
+  },
   "trustedDependencies": [
     "@shopify/plugin-cloudflare"
   ],
-  "resolutions": {
-    "undici": "6.13.0"
-  },
-  "overrides": {
-    "undici": "6.13.0"
-  },
   "author": "srahman"
 }
