--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -28,3 +28,17 @@ api_version = "2024-07"
 
 [pos]
 embedded = false
+
+# tag::discount-allocator.metafield-definitions::
+[discount.metafields.app.single_discount_cap]
+name = "Single Discount Cap"
+description = "Maximum reduction value for a single discount"
+type = "number_decimal"
+validations.min = 0
+
+[shop.metafields.app.per_cart_cap]
+name = "Maximum Discount Per Cart"
+description = "Maximum discount value applied to a single cart"
+type = "number_decimal"
+validations.min = 0
+# end::discount-allocator.metafield-definitions::
